--- a/ProyectoWEB/client/src/componentes/Register/Register.css
+++ b/ProyectoWEB/client/src/componentes/Register/Register.css
@@ -74,6 +74,7 @@
    
    .boton_registro:hover {
     animation: shake3856 0.3s linear infinite both;
+    cursor: pointer;
    }
    
    @keyframes shake3856 {
